Document why we're setting lower target compatibility